--- a/c_src/Makefile
+++ b/c_src/Makefile
@@ -21,7 +21,7 @@ distclean:
 
 $(DEPS)/zeromq2:
 	@mkdir $(DEPS)
-	@git clone git@github.com:zeromq/zeromq2-x.git $(DEPS)/zeromq2
+	@git clone https://github.com/zeromq/zeromq2-x.git $(DEPS)/zeromq2
 	@echo $(ZEROMQ_VERSION)
 	@cd $(DEPS)/zeromq2 && git checkout $(ZEROMQ_VERSION)
 
